--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,18 @@
 name: Build Android APK
 
-on: [push, workflow_dispatch]
+on: 
+  push:
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -16,7 +21,15 @@ jobs:
       - name: Run Unit Tests
         run: gradle testDebugUnitTest
 
-      # STEP 2: Only build if tests passed
+      # STEP 2: Upload the Error Report (Runs even if tests fail)
+      - name: Upload Test Report
+        if: always() 
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: app/build/reports/tests/testDebugUnitTest/
+
+      # STEP 3: Build APK (Only runs if tests passed)
       - name: Build APK
         run: gradle assembleDebug
 
