Enhance unit test logging in build.gradle
Added detailed logging for unit tests in testOptions.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     
@@ -28,11 +29,24 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+
+    // --- NEW SECTION: This makes logs detailed ---
+    testOptions {
+        unitTests.all {
+            testLogging {
+                events "passed", "skipped", "failed", "standardOut", "standardError"
+                showExceptions true
+                exceptionFormat "full"
+            }
+        }
+    }
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
-testImplementation 'junit:junit:4.13.2'
+    
+    // --- NEW DEPENDENCY: Required for testing ---
+    testImplementation 'junit:junit:4.13.2'
 }
