--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.caching=true
+org.gradle.configuration-cache=true
+org.gradle.parallel=true
