--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,5 +31,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: flashlight-apk
+          name: myandroid-apk
           path: app/build/outputs/apk/debug/*.apk
