--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,6 @@ android.enableJetifier=true
 org.gradle.caching=true
 org.gradle.configuration-cache=false
 org.gradle.parallel=true
+
+# OPTIMIZATION: Aggressive Code Shrinking
+android.enableR8.fullMode=true
