--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+        
+        // OPTIMIZATION: Keep only English resources.
+        // This removes translations for other languages from libraries.
+        resConfigs "en", "xxhdpi"
     }
 
     buildTypes {
