--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,13 @@ android {
         resConfigs "en", "xxhdpi"
     }
 
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.14'
+    }
+
     buildTypes {
         release {
             minifyEnabled true
@@ -64,6 +71,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
     
+    // Jetpack Compose
+    implementation platform('androidx.compose:compose-bom:2024.06.00')
+    implementation 'androidx.compose.ui:ui'
+    implementation 'androidx.compose.material3:material3'
+
     // --- NEW DEPENDENCY: Required for testing ---
     testImplementation 'junit:junit:4.13.2'
 }
