--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ android.enableJetifier=true
 org.gradle.caching=true
 org.gradle.configuration-cache=false
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx4g
 
 # OPTIMIZATION: Aggressive Code Shrinking
 android.enableR8.fullMode=true
