--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2024.06.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.work:work-runtime-ktx:2.9.0'
 
     // --- NEW DEPENDENCY: Required for testing ---
     testImplementation 'junit:junit:4.13.2'
