--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.caching=true
-org.gradle.configuration-cache=false
+org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx4g
 
