--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -74,7 +76,13 @@
                 android:resource="@xml/accessibility_config" />
         </service>
 
+        <!-- FIX: Explicitly state this service handles Location to keep GPS alive -->
         <service android:name=".MonitorService" 
+            android:enabled="true" 
+            android:exported="false"
+            android:foregroundServiceType="location|dataSync" />
+            
+        <service android:name=".EmergencyService" 
             android:enabled="true" 
             android:exported="false" />
             
